base.core/src/main/java/eapli/base/questionnairemanagement/validation/QuestionnaireGrammarParser.java
// Generated from C:/Users/joser/OneDrive/Ambiente de Trabalho/Projeto/lei21_22_s4_2di_02/base.core/src/main/java/eapli/base/questionnairemanagement/validation\QuestionnaireGrammar.g4 by ANTLR 4.10.1
package eapli.base.questionnairemanagement.validation;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QuestionnaireGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, MANDATORY=11, OPTIONAL=12, CONDITIONAL=13, CONDITION=14, REP=15, 
		QUESTION=16, TYPE=17, VALUECHECK=18, EXTRAINFO=19, OPTION=20, OPTIONCHOICE=21, 
		VALUE=22, FREETEXT=23, LIMITCHAR=24, LIMITCHARLINE=25, DECIMAL=26, NUMERIC=27, 
		SINGLECHOICE=28, INPUTOPTION=29, MULTIPLECHOICE=30, SORTING=31, SCALING=32, 
		SCALE=33, IDVALUE=34, NUMBER=35, STRING=36, STRING_ML=37, WS=38, NEWLINE=39;
	public static final int
		RULE_prog = 0, RULE_start = 1, RULE_header = 2, RULE_id = 3, RULE_title = 4, 
		RULE_welmsg = 5, RULE_endmsg = 6, RULE_section = 7, RULE_sid = 8, RULE_descr = 9, 
		RULE_obligat = 10, RULE_rep = 11, RULE_condicional = 12, RULE_condition = 13, 
		RULE_question = 14, RULE_qid = 15, RULE_question_ask = 16, RULE_instructions = 17, 
		RULE_type = 18, RULE_valuecheck = 19, RULE_extrainfo = 20, RULE_option = 21, 
		RULE_freetext = 22, RULE_limitchar = 23, RULE_limitcharline = 24, RULE_numeric = 25, 
		RULE_singlechoice = 26, RULE_singlechoiceinput = 27, RULE_inputoption = 28, 
		RULE_multiplechoice = 29, RULE_multiplechoiceinput = 30, RULE_sorting = 31, 
		RULE_scaling = 32, RULE_scale = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "start", "header", "id", "title", "welmsg", "endmsg", "section", 
			"sid", "descr", "obligat", "rep", "condicional", "condition", "question", 
			"qid", "question_ask", "instructions", "type", "valuecheck", "extrainfo", 
			"option", "freetext", "limitchar", "limitcharline", "numeric", "singlechoice", 
			"singlechoiceinput", "inputoption", "multiplechoice", "multiplechoiceinput", 
			"sorting", "scaling", "scale"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ID:'", "'TITLE:'", "'WELCOME MENSAGE:'", "'END MENSAGE:'", "'SECTION ID:'", 
			"'DESCRIPTION:'", "'OBLIGATORINESS:'", "'QUESTION ID:'", "'INTRUCTIONS:'", 
			"'-'", "'MANDATORY'", "'OPTIONAL'", "'CONDITIONAL'", "'CONDITION:'", 
			"'REP:'", "'QUESTION:'", "'TYPE:'", "'VALUECHECK:'", "'EXTRAINFO:'", 
			"'OPTION:'", null, "'VALUE:'", "'FREETEXT'", "'LIMITCHAR:'", "'LIMITCHARLINE:'", 
			"'DECIMAL'", "'NUMERIC'", "'SINGLECHOICE'", "'INPUTOPTION:'", "'MULTIPLECHOICE'", 
			"'SORTING'", "'SCALING'", "'SCALE:'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "MANDATORY", 
			"OPTIONAL", "CONDITIONAL", "CONDITION", "REP", "QUESTION", "TYPE", "VALUECHECK", 
			"EXTRAINFO", "OPTION", "OPTIONCHOICE", "VALUE", "FREETEXT", "LIMITCHAR", 
			"LIMITCHARLINE", "DECIMAL", "NUMERIC", "SINGLECHOICE", "INPUTOPTION", 
			"MULTIPLECHOICE", "SORTING", "SCALING", "SCALE", "IDVALUE", "NUMBER", 
			"STRING", "STRING_ML", "WS", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QuestionnaireGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QuestionnaireGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<StartContext> start() {
			return getRuleContexts(StartContext.class);
		}
		public StartContext start(int i) {
			return getRuleContext(StartContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(68);
				start();
				}
				}
				setState(71); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public EndmsgContext endmsg() {
			return getRuleContext(EndmsgContext.class,0);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			header();
			setState(75); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(74);
				section();
				}
				}
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__4 );
			setState(79);
			endmsg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
	 
		public HeaderContext() { }
		public void copyFrom(HeaderContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class GenerateHeaderContext extends HeaderContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public WelmsgContext welmsg() {
			return getRuleContext(WelmsgContext.class,0);
		}
		public GenerateHeaderContext(HeaderContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterGenerateHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitGenerateHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitGenerateHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header);
		int _la;
		try {
			_localctx = new GenerateHeaderContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			id();
			setState(82);
			title();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(83);
				welmsg();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode IDVALUE() { return getToken(QuestionnaireGrammarParser.IDVALUE, 0); }
		public TerminalNode NEWLINE() { return getToken(QuestionnaireGrammarParser.NEWLINE, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(86);
			match(T__0);
			}
			setState(87);
			match(IDVALUE);
			setState(88);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TitleContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(QuestionnaireGrammarParser.STRING, 0); }
		public TerminalNode NEWLINE() { return getToken(QuestionnaireGrammarParser.NEWLINE, 0); }
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(90);
			match(T__1);
			}
			setState(91);
			match(STRING);
			setState(92);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WelmsgContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(QuestionnaireGrammarParser.NEWLINE, 0); }
		public TerminalNode STRING() { return getToken(QuestionnaireGrammarParser.STRING, 0); }
		public TerminalNode STRING_ML() { return getToken(QuestionnaireGrammarParser.STRING_ML, 0); }
		public WelmsgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_welmsg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterWelmsg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitWelmsg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitWelmsg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WelmsgContext welmsg() throws RecognitionException {
		WelmsgContext _localctx = new WelmsgContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_welmsg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(94);
			match(T__2);
			}
			setState(95);
			_la = _input.LA(1);
			if ( !(_la==STRING || _la==STRING_ML) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(96);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndmsgContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(QuestionnaireGrammarParser.NEWLINE, 0); }
		public TerminalNode STRING() { return getToken(QuestionnaireGrammarParser.STRING, 0); }
		public TerminalNode STRING_ML() { return getToken(QuestionnaireGrammarParser.STRING_ML, 0); }
		public EndmsgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endmsg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterEndmsg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitEndmsg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitEndmsg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EndmsgContext endmsg() throws RecognitionException {
		EndmsgContext _localctx = new EndmsgContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_endmsg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(98);
			match(T__3);
			}
			setState(99);
			_la = _input.LA(1);
			if ( !(_la==STRING || _la==STRING_ML) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(100);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public SidContext sid() {
			return getRuleContext(SidContext.class,0);
		}
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public DescrContext descr() {
			return getRuleContext(DescrContext.class,0);
		}
		public ObligatContext obligat() {
			return getRuleContext(ObligatContext.class,0);
		}
		public RepContext rep() {
			return getRuleContext(RepContext.class,0);
		}
		public List<QuestionContext> question() {
			return getRuleContexts(QuestionContext.class);
		}
		public QuestionContext question(int i) {
			return getRuleContext(QuestionContext.class,i);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			sid();
			setState(103);
			title();
			setState(104);
			descr();
			setState(105);
			obligat();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==REP) {
				{
				setState(106);
				rep();
				}
			}

			setState(110); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(109);
				question();
				}
				}
				setState(112); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__7 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SidContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(QuestionnaireGrammarParser.NUMBER, 0); }
		public TerminalNode NEWLINE() { return getToken(QuestionnaireGrammarParser.NEWLINE, 0); }
		public SidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterSid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitSid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitSid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SidContext sid() throws RecognitionException {
		SidContext _localctx = new SidContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__4);
			setState(115);
			match(NUMBER);
			setState(116);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescrContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(QuestionnaireGrammarParser.NEWLINE, 0); }
		public TerminalNode STRING() { return getToken(QuestionnaireGrammarParser.STRING, 0); }
		public TerminalNode STRING_ML() { return getToken(QuestionnaireGrammarParser.STRING_ML, 0); }
		public DescrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_descr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterDescr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitDescr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitDescr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescrContext descr() throws RecognitionException {
		DescrContext _localctx = new DescrContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_descr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__5);
			setState(119);
			_la = _input.LA(1);
			if ( !(_la==STRING || _la==STRING_ML) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(120);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObligatContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(QuestionnaireGrammarParser.NEWLINE, 0); }
		public TerminalNode MANDATORY() { return getToken(QuestionnaireGrammarParser.MANDATORY, 0); }
		public TerminalNode OPTIONAL() { return getToken(QuestionnaireGrammarParser.OPTIONAL, 0); }
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public ObligatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obligat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterObligat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitObligat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitObligat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObligatContext obligat() throws RecognitionException {
		ObligatContext _localctx = new ObligatContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_obligat);
		int _la;
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				match(T__6);
				setState(123);
				_la = _input.LA(1);
				if ( !(_la==MANDATORY || _la==OPTIONAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(124);
				match(NEWLINE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				match(T__6);
				setState(126);
				condicional();
				setState(127);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepContext extends ParserRuleContext {
		public TerminalNode REP() { return getToken(QuestionnaireGrammarParser.REP, 0); }
		public TerminalNode VALUE() { return getToken(QuestionnaireGrammarParser.VALUE, 0); }
		public TerminalNode NEWLINE() { return getToken(QuestionnaireGrammarParser.NEWLINE, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(QuestionnaireGrammarParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(QuestionnaireGrammarParser.NUMBER, i);
		}
		public List<TerminalNode> STRING() { return getTokens(QuestionnaireGrammarParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(QuestionnaireGrammarParser.STRING, i);
		}
		public RepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rep; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).enterRep(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireGrammarListener ) ((QuestionnaireGrammarListener)listener).exitRep(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireGrammarVisitor ) return ((QuestionnaireGrammarVisitor<? extends T>)visitor).visitRep(this);
			else return visitor.visitChildren(this);
		}
	}
